<resources>
    <string name="app_name">oec</string>
    <!--标题描述-->
    <string name="home_fragment_toolbar_title">商传</string>
    <string name="classify_fragment_toolbar_title">应用</string>
    <string name="team_fragment_toolbar_user">用户</string>
    <string name="team_fragment_toobar_organization">组织架构</string>
    <string name="team_fragment_toolbar_character">角色</string>
    <string name="bottombar_home">首页</string>
    <string name="bottombar_classify">应用</string>
    <string name="bottombar_team">团队</string>
    <string name="bottombar_user">我的</string>

    <!--我的-->
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_switch_organization">机构切换</string>
    <string name="user_organize_info">机构信息</string>
    <string name="user_modify_password">修改密码</string>
    <string name="user_about">关于</string>
    <string name="user_drop_out">退出登录</string>
    <!--首页-->
    <string name="home_search_text">搜索工单/办公申请/工作报告等</string>
    <string name="home_banner">公告</string>
    <string name="home_total_banners">全部公告</string>
    <string name="home_total_dynamics">全部动态</string>
    <string name="home_dynamic">动态（最新5条）</string>
    <string name="home_banner_total">全部</string>
    <string name="home_banner_already_read">已读</string>
    <string name="home_banner_unread">未读</string>
    <!--应用-->
    <string name="apply_work_order">工单</string>
    <string name="apply_add_work_order">创建工单</string>
    <string name="apply_work_order_list">工单列表</string>
    <string name="apply_office">办公</string>
    <string name="apply_office_apply">办公申请</string>
    <string name="apply_approve_office">办公审批</string>
    <string name="apply_work_report">工作报告</string>
    <string name="apply_check_work">考勤</string>
    <string name="apply_other_application">其他应用</string>
    <string name="apply_client">客户</string>
    <string name="apply_project">项目</string>
    <string name="apply_zhu_lei_bie">主类别</string>
    <string name="apply_zi_lei_bie">子类别</string>
    <string name="apply_create_wo_title">标题</string>
    <string name="apply_wo_tag">标记</string>
    <string name="apply_create_wo_content">内容</string>
    <string name="apply_create_wo_owner">责任人</string>
    <string name="apply_commit_wo">提交工单</string>
    <string name="apply_work_overtime">加班</string>
    <string name="apply_leave">请假</string>
    <string name="apply_work_outside">外勤/出差</string>
    <string name="apply_reimburse">报销</string>
    <string name="apply_common">通用申请</string>
    <string name="apply_start">开始</string>
    <string name="apply_end">结束</string>
    <string name="apply_hours">时长（小时）</string>
    <string name="apply_explain">说明</string>
    <string name="apply_approve_owner">审批人</string>
    <string name="apply_submit_btn">提交申请</string>
    <string name="apply_leave_type">类型</string>
    <string name="apply_leave_time">时长(天)</string>
    <string name="apply_wo_destination">目的地</string>
    <string name="apply_outside_client">客户</string>
    <string name="apply_outside_company">陪同人员</string>
    <string name="apply_reimburse_time">产生时间</string>
    <string name="apply_total_sum">金额</string>
    <string name="apply_common_time">时间</string>
    <string name="apply_common_title">标题</string>
    <string name="apply_current_report_content">本期工作内容</string>
    <string name="apply_next_week_plan">下周工作计划</string>
    <string name="apply_question_recommend">问题和建议</string>
    <string name="apply_report_owner">汇报人</string>
    <string name="apply_submit">提&#160;&#160;交</string>
    <string name="apply_my_create">我创建的</string>
    <string name="apply_my_approve">我审阅的</string>
    <string name="apply_submit_time">提交时间：</string>
    <string name="apply_personal">个人</string>
    <string name="apply_company">公司</string>
    <string name="apply_add_client">新增客户</string>
    <string name="apply_client_type">客户类型</string>
    <string name="apply_client_code">客户编码</string>
    <string name="apply_client_full_name">客户全称</string>
    <string name="apply_client_simple_name">客户简称</string>
    <string name="apply_client_tel">联系电话</string>
    <string name="apply_client_simple_address">省市区</string>
    <string name="apply_client_address_details">详细地址</string>
    <string name="apply_client_postcode">邮编</string>
    <string name="apply_client_remark">备注</string>
    <string name="apply_client_contacter">联系人</string>
    <string name="apply_file_time">建档时间：</string>
    <string name="apply_contacts_name">姓名</string>
    <string name="apply_contacts_department">部门</string>
    <string name="apply_contacts_job">职务</string>
    <string name="apply_contacts_tel">电话</string>
    <string name="apply_contacts_email">邮箱</string>
    <string name="apply_project_name">项目名称</string>
    <string name="apply_project_code">项目编码</string>
    <string name="apply_responsibile_person">负责人</string>
    <string name="apply_wo_wait_deal_with">待处理</string>
    <string name="apply_wo_already_create">已创建</string>
    <string name="apply_status">状态</string>
    <string name="apply_approve_advise">审批意见：转他人处理时必须填写，转他人时选填</string>
    <string name="apply_wo_type">类别</string>
    <string name="apply_title">标题</string>
    <!--团队-->
    <string name="team_user_nick">昵称</string>
    <string name="team_user_gender">性别</string>
    <string name="team_user_password">密码</string>
    <string name="team_user_character">角色</string>
    <string name="team_user_tel">手机号</string>
    <string name="team_pre_node">上级节点</string>
    <string name="team_department_name">部门名称</string>
    <string name="team_describe">描述</string>
    <string name="team_add">添          加</string>
    <string name="user_organize_code">机构代码：</string>
    <string name="user_administration">管理员：</string>
    <string name="user_address">地址</string>
    <string name="organize_members">成员</string>
    <string name="user_organization">机构</string>
    <string name="organize_full_name">全称</string>
    <string name="organize_simple_name">简称</string>
    <string name="organize_code">代码</string>

    <!--我的-->
    <!--&#160; 代表空格-->
    <string name="user_phone_number">手机号</string>
    <string name="user_remember_me">记住我</string>
    <string name="user_forget_password">忘记密码？</string>
    <string name="user_login_btn">登&#160;&#160;录</string>
    <string name="user_verify_code">验证码</string>
    <string name="user_send_verify_code">发送验证码</string>
    <string name="user_refresh_code">重新获取</string>
    <string name="user_next">下一步</string>
    <string name="user_set_new_pwd">设置新密码</string>
    <string name="user_confirm_new_pwd">确认新密码</string>
    <string name="user_old_pwd">旧密码</string>
    <string name="user_be_sure">确&#160;&#160;定</string>
    <string name="user_avater">头像</string>
    <string name="user_name">姓名</string>
</resources>

