<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="left|center_vertical"
        android:text="@string/apply_work_order"
        android:paddingLeft="15dp"
        android:textSize="11sp"
        android:background="@color/theme_divide_color"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
         <RadioButton
             android:id="@+id/rb_apply_add_wo"
             style="@style/apply_fragment_radioGroup_style"
             android:text="@string/apply_add_work_order"
             android:drawableTop="@drawable/application_icon_wo_new"
             />
        <RadioButton
        android:id="@+id/rb_apply_wo_list"
        style="@style/apply_fragment_radioGroup_style"
        android:text="@string/apply_work_order_list"
        android:drawableTop="@drawable/application_icon_wo_list"
        />
        <RadioButton
           style="@style/apply_fragment_radioGroup_style"/>
        <RadioButton
            style="@style/apply_fragment_radioGroup_style"/>

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="left|center_vertical"
        android:text="@string/apply_office"
        android:paddingLeft="15dp"
        android:textSize="11sp"
        android:background="@color/theme_divide_color"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_work_apply"
            style="@style/apply_fragment_radioGroup_style"
            android:text="@string/apply_office_apply"
            android:drawableTop="@drawable/application_icon_oa_new"
            />
        <RadioButton
            android:id="@+id/rb_apply_approve_work"
            style="@style/apply_fragment_radioGroup_style"
            android:text="@string/apply_approve_office"
            android:drawableTop="@drawable/application_icon_oa_pending"
            />
        <RadioButton
            android:id="@+id/rb_apply_work_report"
            android:drawableTop="@drawable/application_icon_oa_report"
            android:text="@string/apply_work_report"
            style="@style/apply_fragment_radioGroup_style"/>
        <RadioButton
            android:id="@+id/rb_work_check_work"
            android:text="@string/apply_check_work"
            android:drawableTop="@drawable/application_icon_oa_attendance"
            style="@style/apply_fragment_radioGroup_style"/>

    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="left|center_vertical"
        android:text="@string/apply_other_application"
        android:paddingLeft="15dp"
        android:textSize="11sp"
        android:background="@color/theme_divide_color"/>
    <RelativeLayout
        android:id="@+id/rel_apply_client"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/img_client_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/application_icon_crm"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_dark_text_color"
            android:text="@string/apply_client"
            android:textSize="14sp"

            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_divide_color"/>
    <RelativeLayout
        android:id="@+id/rel_apply_project"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/img_project_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/application_icon_project"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_dark_text_color"
            android:text="@string/apply_project"
            android:textSize="14sp"

            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
</LinearLayout>