<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_total_banner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="shangchuan.com.oec.ui.home.activity.TotalBannerActivity">
    <include layout="@layout/toolbar_layout"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/theme_divide_color"
        >
        <RadioButton
            android:id="@+id/rb_banner_total"
            style="@style/business_classify_radioGroup_style"
            android:text="@string/home_banner_total"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rb_banner_already_read"
            style="@style/business_classify_radioGroup_style"
            android:text="@string/home_banner_already_read"
            />
        <RadioButton
            android:id="@+id/rb_banner_unread"
            style="@style/business_classify_radioGroup_style"
            android:text="@string/home_banner_unread"
            />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/total_banners_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
</LinearLayout>
