<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="shangchuan.com.oec.ui.user.activity.ModifyPwdActivity">
    <include layout="@layout/toolbar_layout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/theme_divide_color"/>
    <EditText
        android:id="@+id/et_old_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:paddingLeft="15dp"
        android:gravity="center_vertical|left"
        android:hint="@string/user_old_pwd"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/theme_divide_color"/>
    <EditText
        android:id="@+id/et_new_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:paddingLeft="15dp"
        android:password="true"
        android:gravity="center_vertical|left"
        android:hint="@string/user_set_new_pwd"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
    <EditText
        android:id="@+id/et_confirm_new_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:paddingLeft="15dp"
        android:password="true"
        android:gravity="center_vertical|left"
        android:hint="@string/user_confirm_new_pwd"
        android:textSize="14sp"
        />
    <Button

        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/sure"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_commit_work_order_button_bg"
        android:text="@string/user_be_sure"
        android:textColor="@android:color/white"
        />
</LinearLayout>
