<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/user_phone_number_bg_color"
        >
        <RelativeLayout
            android:id="@+id/rel_search"
            android:layout_width="340dp"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_home_search_background"
            android:gravity="center"
            android:layout_height="32dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/fadajing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/home_search_icon"
                />
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/home_search_text"
                android:layout_toRightOf="@id/fadajing"
                />
            </RelativeLayout>



        </RelativeLayout>
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="left|center_vertical"
            android:text="@string/home_banner"
            android:paddingLeft="15dp"
            android:textSize="11sp"
            android:background="@color/theme_divide_color"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/banner_recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btn_total_banners"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_total_banners"
                android:background="@drawable/shape_home_total_banners_background"
                android:textColor="@color/home_text_light_green"
                android:button="@null"
                android:textSize="13sp"
               />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="left|center_vertical"
                android:text="@string/home_dynamic"
                android:paddingLeft="15dp"
                android:textSize="11sp"
                android:background="@color/theme_divide_color"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/dynamic_recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            <Button
                android:id="@+id/btn_total_dynamics"
                android:layout_marginTop="10dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_total_dynamics"
                android:background="@drawable/shape_home_total_banners_background"
                android:textColor="@color/home_text_light_green"
                android:button="@null"
                android:textSize="13sp"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>