<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_apply_office"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shangchuan.com.oec.ui.apply.activity.ApplyOfficeActivity">
    <include layout="@layout/toolbar_layout"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_work_overtime"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/oa_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_work_overtime"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_work_leave"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_leave"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_work_outside"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_work_outside"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_work_reimburse"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_reimburse"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_apply_common"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_common"
            android:textSize="14sp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_news_arrow"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_divide_color"/>
</LinearLayout>
